--- a/Codapli-Lemac/src/app/jobs/jobs.component.html
+++ b/Codapli-Lemac/src/app/jobs/jobs.component.html
@@ -13,22 +13,18 @@
     </div>
     <div class="row mt-2">
       <div class="col-md-12">
-        <table class="table">
+        <table class="table table-striped table-bordered table-hover">
           <thead>
             <tr>
-              <th scope="col">#</th>
-              <th scope="col">Fecha</th>
-              <th scope="col">Observaciones</th>
+              <th scope="col">Ensayos</th>
               <th scope="col"></th>
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <th scope="row">3</th>
-              <td>Larry</td>
-              <td>the Bird</td>
-              <td><a class="fa fa-eye" aria-hidden="true"></a>
-                <a class="fa fa-trash" aria-hidden="true"></a>
+            <tr *ngFor="let job of jobs">
+              <td>{{job}}</td>
+              <td><a href="#" class="fa fa-eye" aria-hidden="true"></a>
+                <a  href="#" class="fa fa-trash" aria-hidden="true"></a>
               </td>
             </tr>
           </tbody>
