--- a/Codapli-Lemac/src/app/job/job.component.html
+++ b/Codapli-Lemac/src/app/job/job.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="col-md-12">
-    <div class="row">
+    <div class="row my-4">
       <h4>
         Nuevo Ensayo
       </h4>
