--- a/Codapli-Lemac/src/app/menu-bar/menu-bar.component.html
+++ b/Codapli-Lemac/src/app/menu-bar/menu-bar.component.html
@@ -1,5 +1,7 @@
-<div class="container">
-  <nav class="navbar navbar-dark bg-dark justify-content-center">
-        <a class="navbar-brand" href="#">LEMAC</a>
-  </nav>
-</div>
+<div class="container-fluid">
+    <div class="row "  >
+      <nav class="navbar  fixed-top navbar-expand-lg ml-auto  bg-lemac">  
+            <img class="img-fluid" alt="Responsive image" [src]="'assets/images/lemac.png'">     
+      </nav>
+    </div>
+  </div>
