--- a/Codapli-Lemac/src/styles.css
+++ b/Codapli-Lemac/src/styles.css
@@ -2,6 +2,11 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
 @import "~font-awesome/css/font-awesome.css";
 
-body {
+html,body {
     background-color: #fffffffb;
+    padding-top:30px;
+    padding-bottom: 30px;
+    height: 100%;
+    font-size:17px;
+    
 }
