* Cambios varios y comentarios en el codigo

--- a/Codapli-Lemac/src/styles.css
+++ b/Codapli-Lemac/src/styles.css
@@ -1,6 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.min.css";
 @import "~font-awesome/css/font-awesome.css";
+/* regular style toast */
+@import "~ngx-toastr/toastr.css";
 
 html,body {
     background-color: #fffffffb;
