--- a/Codapli-Lemac/src/styles.css
+++ b/Codapli-Lemac/src/styles.css
@@ -3,6 +3,7 @@
 @import "~font-awesome/css/font-awesome.css";
 /* regular style toast */
 @import "~ngx-toastr/toastr.css";
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 html,body {
     background-color: #fffffffb;
