--- a/Codapli-Lemac/src/app/job/job-description/job-rigidez/job-rigidez.component.html
+++ b/Codapli-Lemac/src/app/job/job-description/job-rigidez/job-rigidez.component.html
@@ -34,4 +34,11 @@
       "Debe ingresar este valor"
     </div>
   </div>
+  <div class="form-group">
+    <label for="muestra">Muestra</label>
+    <input type="text" class="form-control" id="muestra" formControlName="muestra">
+    <div class="alert alert-danger" *ngIf="formGroup.get('muestra').invalid && formGroup.get('muestra').dirty">
+      "Debe ingresar este valor"
+    </div>
+  </div>
 </form>
