--- a/Codapli-Lemac/src/app/job/job-settings/job-settings.component.html
+++ b/Codapli-Lemac/src/app/job/job-settings/job-settings.component.html
@@ -34,7 +34,7 @@
       <mat-card-actions>
         <div class="row text-center">
           <div class="col-md-12">
-            <button class="btn btn-secondary">Setear</button>
+            <button class="btn btn-secondary" (click)="setLVDTS()">Setear</button>
           </div>
         </div>
       </mat-card-actions>
