--- a/Codapli-Lemac/src/app/job/job-settings/lvdts/lvdts.component.html
+++ b/Codapli-Lemac/src/app/job/job-settings/lvdts/lvdts.component.html
@@ -1,20 +1,22 @@
 <div class="row">
     <div class="col-md-6">
       <form [formGroup]="formGroup">
-        <div class="form-group">
-          <label for="lvdt0">LVDT 1</label>
-          <input type="text" class="form-control" id="lvdt0" formControlName="lvdt0">
-          <div class="alert alert-danger" *ngIf="formGroup.get('lvdt0').invalid && formGroup.get('lvdt0').dirty">
-            "Debe ingresar este valor"
+        <div class="form-group"  formGroupName="lvdt0">
+            <label for="value">LVDT1</label>
+              <select class="form-control" id="value" formControlName="value" class="custom-select">
+                  <option [ngValue]="1">0mm-1mm</option>
+                  <option [ngValue]="2">0mm-2mm</option>
+                  <option [ngValue]="3">0mm-2.5mm</option>
+                </select>
           </div>
-        </div>
-        <div class="form-group">
-            <label for="lvdt1">LVDT 2</label>
-            <input type="text" class="form-control" id="lvdt1" formControlName="lvdt1">
-            <div class="alert alert-danger" *ngIf="formGroup.get('lvdt1').invalid && formGroup.get('lvdt1').dirty">
-              "Debe ingresar este valor"
+          <div class="form-group" formGroupName="lvdt1">
+              <label for="value">LVDT2</label>
+                <select class="form-control" id="value" formControlName="value" class="custom-select">
+                    <option [ngValue]="1">0mm-1mm</option>
+                    <option [ngValue]="2">0mm-2mm</option>
+                    <option [ngValue]="3">0mm-2.5mm</option>
+                  </select>
             </div>
-          </div>
       </form>
     </div>
   </div>
