--- a/Codapli-Lemac/src/app/job/job-settings/lecturas/lecturas.component.html
+++ b/Codapli-Lemac/src/app/job/job-settings/lecturas/lecturas.component.html
@@ -1,3 +1,9 @@
-<p>
-  lecturas works!
-</p>
+<div class="row">
+    <div class="col-12">
+      <ul>
+        <li>CELDA: {{celda}}</li>
+        <li>LVDT-1: {{lvdt0}}</li>
+        <li>LVDT-2: {{lvdt1}}</li>
+      </ul>
+    </div>
+</div>
