* Modificacion del tiempo de muestreo

--- a/Codapli-Lemac/src/app/job/job-settings/job-settings.component.html
+++ b/Codapli-Lemac/src/app/job/job-settings/job-settings.component.html
@@ -22,8 +22,8 @@
       <mat-card-actions>
           <div class="row text-center">
               <div class="col-md-12">
-                <button class="btn btn-secondary">Tara</button>
-                <button class="btn btn-secondary">Setear</button>
+                <button class="btn btn-secondary" (click)="setTara()">Tara</button>
+                <button class="btn btn-secondary" (click)="setCelda()">Setear</button>
            </div>
           </div>
       </mat-card-actions>
