*Cambio de dimensiones a Alto,Ancho,Profundidad. *Truncado de decimales.

--- a/Codapli-Lemac/src/app/job/job-experiment/experiment/list-detail-aycf/list-detail-aycf.component.html
+++ b/Codapli-Lemac/src/app/job/job-experiment/experiment/list-detail-aycf/list-detail-aycf.component.html
@@ -1,5 +1,7 @@
 <ul class="list-group">
-  <li>Dimensiones : {{job.dimensiones}}</li>
+  <li>alto : {{job.alto}}</li>
+  <li>Ancho : {{job.ancho}}</li>
+  <li>profundidad : {{job.profundidad}}</li>
   <li>Material : {{job.material}}</li>
   <li>Temperatura : {{job.temperatura}}</li>
   <li>Recorrido de la placa : {{job.recorridoPlaca}}</li>
