--- a/Codapli-Lemac/src/app/job/job-description/job-rigidez/job-rigidez.component.html
+++ b/Codapli-Lemac/src/app/job/job-description/job-rigidez/job-rigidez.component.html
@@ -1,7 +1,21 @@
 <form [formGroup]="formGroup">
   <div class="form-group">
-    <label for="dimensiones">Dimensiones</label>
-    <input type="text" class="form-control" id="dimensiones" formControlName="dimensiones">
+    <label for="alto">Alto</label>
+    <input type="text" class="form-control" id="alto" formControlName="alto">
+    <div class="alert alert-danger" *ngIf="formGroup.get('dimensiones').invalid && formGroup.get('dimensiones').dirty">
+      "Debe ingresar este valor"
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="ancho">Ancho</label>
+    <input type="text" class="form-control" id="ancho" formControlName="ancho">
+    <div class="alert alert-danger" *ngIf="formGroup.get('dimensiones').invalid && formGroup.get('dimensiones').dirty">
+      "Debe ingresar este valor"
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="profundidad">Profundidad</label>
+    <input type="text" class="form-control" id="profundidad" formControlName="profundidad">
     <div class="alert alert-danger" *ngIf="formGroup.get('dimensiones').invalid && formGroup.get('dimensiones').dirty">
       "Debe ingresar este valor"
     </div>
