--- a/Codapli-Lemac/src/app/job/job-experiment/experiment/list-detail-rigidez/list-detail-rigidez.component.html
+++ b/Codapli-Lemac/src/app/job/job-experiment/experiment/list-detail-rigidez/list-detail-rigidez.component.html
@@ -1,7 +1,9 @@
 <ul class="list-group">
   <li>Material : {{job.material}}</li>
   <li>Frecuencia : {{job.frecuencia}}</li>
-  <li>Dimensiones : {{job.dimensiones}}</li>
+  <li>Alto : {{job.alto}}</li>
+  <li>Ancho : {{job.ancho}}</li>
+  <li>Profundidad : {{job.profundidad}}</li>
   <li>Carga : {{job.carga}}</li>
   <li>Muestra : {{job.muestra}}</li>
   <li>Temperatura : {{job.temperatura}}</li>
