--- a/Codapli-Lemac/src/app/components/alert.component.css
+++ b/Codapli-Lemac/src/app/components/alert.component.css
@@ -1,7 +1,18 @@
 .alert{
-  background-color: red;
-  text-align: center;
-  position: fixed;
-  width: 100%;
-  z-index: 10;
+  background-color: rgb(172, 9, 9);
+  color: white;
+  text-transform: uppercase;
+  font-size: 1em;
+  border-radius: 5px;
+
+}
+
+.blink_me {
+  animation: blinker 1.5s linear infinite;
+}
+
+@keyframes blinker {
+  50% {
+    opacity: 0;
+  }
 }
