--- a/Codapli-Lemac/src/app/components/alert.component.css
+++ b/Codapli-Lemac/src/app/components/alert.component.css
@@ -4,7 +4,12 @@
   text-transform: uppercase;
   font-size: 1em;
   border-radius: 5px;
+}
 
+.container-fluid{
+  position: sticky;
+  top: 50px;
+  z-index: 10;
 }
 
 .blink_me {
